[package]
name = "vulkano_triangle_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.1"
png = "0.17.6"
vulkano = "0.30.0"
vulkano-shaders = "0.30.0"
vulkano-win = "0.30.0"
winit = "0.26.0"
